# memo-fish

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.alloy  entrypoint.sh  fly.toml  openapi.yaml
.github/workflows/: build.yaml
doc/: log-fields.md
src/: buildinfo.rs  config.rs  logger.rs  main.rs  rewriter.rs  shutdown.rs  writer.rs
src/api/: auth.rs  download.rs  ingest.rs  metrics.rs  mod.rs  status.rs
