[package]
name = "memo-fish"
version = "0.1.0"
edition = "2021"
authors = ["HaKu <haku@sumemo.dev>"]
description = "Crowdsourced 5-float ingest service. Public POST /ingest -> daily NDJSON on a Fly Volume; mesh0 /metrics."

[[bin]]
name = "memo-fish"
path = "src/main.rs"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
tokio-util         = { version = "0.7", features = ["rt"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"
anyhow             = "1"
subtle             = "2"
libc               = "0.2"
futures            = "0.3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
